--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="input-section">
             <input type="text" id="text" placeholder="Enter url: www.url.com(Format)">
             <div class="img">
-                <img src="" id="qr-code">
+                <img src="" id="qr-code" alt="qrcode img">
             </div>
             <button id="btn">Generate</button>
         </div>
